Fix brand image

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="sr-only">Muestra/oculta el menú</span> Menú <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-					<img alt="SIR Grupo Asesor" title="SIR Grupo Asesor" src="/img/sir-logo.png" />
+					<img alt="SIR Grupo Asesor" title="SIR Grupo Asesor" src="img/sir-logo.png" />
 				</a>
             </div>
 
