--- a/index.html
+++ b/index.html
@@ -63,9 +63,6 @@
                     <li>
 						<a class="page-scroll" href="#where">Donde estamos</a>
 					</li>
-                    <!-- <li>
-                        <a class="page-scroll" href="#about">Sobre nosotros</a>
-                    </li> -->
                     <li>
                         <a class="page-scroll" href="#contact">Contacto</a>
                     </li>
@@ -140,44 +137,85 @@
                     <div class="team-member">
                         <img src="img/team/sergio.jpg" class="img-responsive img-circle" alt="">
                         <h4>Sergio Ivars</h4>
-                        <p class="text-muted">Abogado</p>
+                        <p class="text-muted">
+                            Abogado<br />
+                            Colegiado 5276<br />
+                            Colegio de Abogados de Alicante
+                        </p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="https://www.linkedin.com/in/sergio-ivars-ribes-a2211565"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted">
-                        Sergio Ivars es abogado 
+                        Sergio Ivars - currículum - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur
                     </p>
+                    <p class="large text-muted">
+                        Además, contamos con un grupo de despachos y profesionales que colaboran con nosotros.
+                    </p>
+                    <br /><br />
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/sergio.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Sergio Ivars</h4>
+                        <h4>José Torres Reus</h4>
                         <p class="text-muted">
-							Abogado<br />
-							Colegiado 5276<br />
-							Colegio de Abogados de Alicante
-						</p>
+                            Abogado - Administración de fincas<br />
+                            Avda. de Valencia, 19; Edificio Coral, Local 2<br />
+                            Calp
+                        </p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="https://www.linkedin.com/in/sergio-ivars-ribes-a2211565"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="http://www.pepetorres.es"><i class="fa fa-desktop"></i></a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>------</h4>
-                        <p class="text-muted">Administrador de fincas</p>
+                        <h4>Alvaro Mendoza Sánchez</h4>
+                        <p class="text-muted">
+                            FERNANDEZ ASESORES Y ABOGADOS, S.L<br />
+                            Especialidad en derecho fiscal y no residentes<br />
+                            Avda. del Mediterráneo, 135 2º<br />
+                            03725 - Teulada
+                        </p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="http://www.fernandezconsulting.es"><i class="fa fa-desktop"></i></a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
+                        <h4>José Luís Sintes Zamanillo</h4>
+                        <p class="text-muted">
+                            Abogado. Especialidad en derecho penal<br />
+                            C/ San Judas Tadeo, 22<br />
+                            03727 - Xaló<br />
+                        </p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="mailto:jsintes-zamanillo@icali.es"><i class="fa fa-envelope"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-sm-offset-4">
+                    <div class="team-member">
+                        <h4>José Luís Sintes Zamanillo</h4>
+                        <p class="text-muted">
+                            SEGUROS ERN AGUD, S.L.<br />
+                            Avda. del Portet, 45-bajo<br />
+                            03724 - Moraira
+                        </p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="tel:966177700"><i class="fa fa-phone"></i></a></li>
+                            <li><a href="tel:639686674"><i class="fa fa-mobile-phone"></i></a></li>
+                            <li><a href="tel:966490824"><i class="fa fa-fax"></i></a></li>
+                            <li><a href="mailto:segurosernagud@gmail.com"><i class="fa fa-envelope"></i></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -204,85 +242,13 @@
 					 (Alicante)</p>
 				</div>
             </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="bg-light-gray">
-        <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
-                            </div>
-                        </li>
-                    </ul>
+				<div class="col-lg-6 text-center">
+					<br /><br /><br /><br />
+					<p> También podrán encontrarnos en nuestro despacho en Moraira,<br /> en la <strong>Avenida del Portet 41</strong>.</p>
+				</div>
+                <div class="col-lg-6">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3114.3050550724124!2d0.13372591540035908!3d38.687836479603455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x129e07cecf1cab71%3A0xfb4c90a8fb6c665a!2sAv.+del+Portet%2C+41%2C+03724+Moraira%2C+Alacant%2C+Espanya!5e0!3m2!1sca!2sus!4v1472896626265" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
